@@ -34,6 +34,7 @@
 #include <QUrl>
 
 #include "codec.h"
+#include "metaevent.h"
 
 class Connector : public QObject
 {
@@ -50,8 +51,6 @@ class Connector : public QObject
   QUrl serverUrl() const;
   void setServerUrl(const QUrl &url);
   QString serverMountpoint() const;
-  //  QString contentType() const;
-  //  void setContentType(const QString &str);
   unsigned audioBitrate() const;
   void setAudioBitrate(unsigned rate);
   std::vector<unsigned> *audioBitrates();
@@ -77,10 +76,6 @@ class Connector : public QObject
   bool streamPublic() const;
   void setStreamPublic(bool state);
   Codec::Type codecType() const;
-  //  QString extension() const;
-  //void setExtension(const QString &str);
-  //  QString formatIdentifier() const;
-  //  void setFormatIdentifier(const QString &str);
   bool isConnected() const;
   virtual void connectToServer();
   void stop();
@@ -112,7 +107,7 @@ class Connector : public QObject
   void connected(bool state);
   void dataReceived(const QByteArray &data);
   void error(QAbstractSocket::SocketError err);
-  void streamMetadataChanged(const QString &str);
+  void metadataReceived(uint64_t bytes,MetaEvent *e);
 
  protected:
   void setCodecType(Codec::Type type);
@@ -128,7 +123,6 @@ class Connector : public QObject
   QString conn_server_username;
   QString conn_server_password;
   QUrl conn_server_url;
-  //  QString conn_content_type;
   std::vector<unsigned> conn_audio_bitrates;
   QString conn_stream_name;
   QString conn_stream_description;
@@ -140,9 +134,7 @@ class Connector : public QObject
   bool conn_stream_metadata_enabled;
   QString conn_stream_metadata;
   bool conn_stream_public;
-  //  QString conn_extension;
   Codec::Type conn_codec_type;
-  //  QString conn_format_identifier;
   QString conn_host_hostname;
   uint16_t conn_host_port;
   QString conn_script_up;
