@@ -1,0 +1,45 @@
+// metaevent.cpp
+//
+// Container class for metadata updates.
+//
+//   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#include "metaevent.h"
+
+MetaEvent::MetaEvent()
+{
+}
+
+
+MetaEvent::MetaEvent(const MetaEvent &e)
+{
+  for(unsigned i=0;i<MetaEvent::LastField;i++) {
+    meta_fields[i]=e.meta_fields[i];
+  }
+}
+
+
+QVariant MetaEvent::field(MetaEvent::Field f) const
+{
+  return meta_fields[f];
+}
+
+
+void MetaEvent::setField(MetaEvent::Field f,const QVariant v)
+{
+  meta_fields[f]=v;
+}
